06-WEB/0x09-LoginMIA-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: login-mia
  labels:
    app: login-mia
spec:
  ports:
    - name: http-port
      port: 9000
  selector:
    app: login-mia
